# nrf52840-dk-i2s-demo

./: 48khz_16bit_mono_10ms_150byte_piano.lc3  48khz_16bit_mono_10ms_150byte_sine.lc3  Cargo.toml  README.md
.cargo/: config.toml
src/: file.rs  main.rs  stats.rs  time.rs
