[package]
name = "nrf52840-dk-i2s-demo"
version = "0.1.0"
authors = ["David Haig"]
edition = "2021"
publish = false

[dependencies]
cortex-m = "0.7.4"
cortex-m-rt = { version = "0.7.1", features = ["device"] }
cortex-m-rtic = { version = "1.0.0", default-features = false }
systick-monotonic = "1.0.0"
nrf52840-hal = { features = ["rt"], version = "0.15.0" }
heapless = "0.7.10"
lc3-codec = { version = "0.2", default-features = false }
embedded-dma = "0.2.0"
crossbeam = { version = "0.8.1", default-features = false }
embedded-hal = { version = "0.2.7", features = ["unproven"]}
nb = "1.0.0"
defmt = "0.3.0"
defmt-rtt = "0.3.1"
panic-probe = { version = "0.3", features = ["print-defmt"] }

[profile.release]
debug = true