[package]
name = "nrf52840-dk-i2s-demo"
version = "0.1.0"
authors = ["David Haig"]
edition = "2021"
publish = false

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
cortex-m-rtic = { version = "1.1.3", default-features = false }
nrf52840-hal = { features = ["rt"], version = "0.16.0" }
lc3-codec = { version = "0.2", default-features = false }
embedded-dma = "0.2.0"
embedded-hal = { version = "0.2.7", features = ["unproven"]}
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }
bbqueue = "0.5.1"
byteorder = { version = "1.4.3", default-features = false }

[profile.release]
debug = true